// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primary Button matches snapshot 1`] = `
<a
  className="sc-bczRLJ dRtteY"
  color="primary"
  data-testid="primarybutton"
  hover="primary"
  href=""
  onClick={[Function]}
>
  SEE PRODUCT
</a>
`;

exports[`Secondary Button matches snapshot 1`] = `
<a
  className="sc-bczRLJ gMbnUY"
  color="secondary"
  data-testid="secondarybutton"
  hover="secondary"
  href=""
  onClick={[Function]}
>
  SEE PRODUCT
</a>
`;
